<resources>
    <string name="app_name">RadioApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu">Local Channels</string>

    <string name="finland">Finland</string>
    <string name="sweden">Sweden</string>
    <string name="usa">United States</string>
    <string name="uk">Britain</string>
    <string name="russia">Russia</string>
    <string name="estonia">Estonia</string>

    <string name="favourites">Favourites</string>
    <string name="channels">Channels</string>

    <string name="settings">Settings</string>
    <string name="automatic_display">Play the previous channel when started</string>
    <string name="show_play_button">Show play button</string>
    <string name="show_audio_visualizer">Show audio visualizer</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="add_to_favourites">Add to Favorites?</string>
    <string name="remove_from_favourites">Remove from Favorites?</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>

    <string name="added_to_favourites">Added to Favorites</string>
    <string name="already_added_to_favourites">Already added to Favorites</string>
    <string name="removed_from_favourites">Removed from Favorites</string>

</resources>
