<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_finland"
            android:icon="@drawable/flag_fin"
            android:title="@string/finland"/>
        <item
            android:id="@+id/nav_sweden"
            android:icon="@drawable/flag_swe"
            android:title="@string/sweden"/>
        <item
            android:id="@+id/nav_usa"
            android:icon="@drawable/flag_usa"
            android:title="@string/usa"/>
        <item
            android:id="@+id/nav_uk"
            android:icon="@drawable/flag_uk"
            android:title="@string/uk"/>
        <item
            android:id="@+id/nav_russia"
            android:icon="@drawable/flag_rus"
            android:title="@string/russia"/>
        <item
            android:id="@+id/nav_estonia"
            android:icon="@drawable/flag_est"
            android:title="@string/estonia"/>
    </group>

    <!--item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/radio_app_icon"
                android:title="Share"/>
        </menu>
    </item-->

</menu>
