<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="24sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/show_play_button_switchCompat"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/show_play_button"
        android:textSize="18sp"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:showText="true"
        android:textColor="@color/colorPrimary"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:thumb="@drawable/thumb_selector"
        app:track="@drawable/track_selector"
        tools:checked="true"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/show_audio_visualizer_switchCompat"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/show_audio_visualizer"
        android:textSize="18sp"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:showText="true"
        android:textColor="@color/colorPrimary"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:thumb="@drawable/thumb_selector"
        app:track="@drawable/track_selector"
        tools:checked="true"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/automatic_display_switchCompat"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:text="@string/automatic_display"
        android:textSize="18sp"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:showText="true"
        android:textColor="@color/colorPrimary"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:thumb="@drawable/thumb_selector"
        app:track="@drawable/track_selector"
        tools:checked="true"/>

</LinearLayout>